Fixed the alignment of nav-links

--- a/style.css
+++ b/style.css
@@ -2112,25 +2112,6 @@ footer h3 {
     color: #fff !important; /* Solid white on hover */
 }
 
-/*===================================================================
-    Underline Effect
-   =================================================================== */
-   /* .navbar-custom .navbar-nav .nav-link{
-    position: relative;
-   }
-   .navbar-custom .navbar-nav .nav-link::after{
-    content:'';
-    position: absolute;
-    bottom: -5px;
-    left: 0;
-    width: 0;
-    height: 2px;
-    background-color: white;
-    transition: width 0.3s;
-   } */
-/* .navbar-custom .navbar-nav ,.nav-link:hover::after{
-    width: 100%;
-} */
 .navbar-custom.scrolled .navbar-nav .nav-link::after {
     background: #667eea;
 }
